--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id user %>">
   <p>
+    <strong>Handle:</strong>
+    @<%= user.handle %>
+  </p>
+
+  <p>
     <strong>Screen name:</strong>
     <%= user.screen_name %>
   </p>
